--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ header{
 	top: 0;
 	position: fixed;
 	font-family: "roboto", sans-serif;
+	z-index: 999;
 
 }
 .logo{
@@ -31,3 +32,46 @@ h2{
 	margin-left: 170px;
 	font-weight: bold;
 }
+.section1{
+	margin-top: 50px;
+}
+.relative-base{
+	position: relative;
+/*	width: 360px;
+	height: 180px;*/
+	display: inline-block;
+}
+.absolute-base{
+	position: absolute;
+	top: 30px;
+	left: 50px;
+	color: #FFFFFF;
+}
+.container{
+	width: 1440px;
+	margin: 0, auto;
+}
+h4{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
+	font-size: 40px;
+}
+.left-block{
+	display: inline-block;
+	vertical-align: middle;
+
+}
+.right-block{
+	display: inline-block;
+	vertical-align: middle;
+	width: 50px;
+	height: 50px;
+	margin-left: 20px;
+}
+footer{
+	background-color: #A6ADB4;
+}
+
