--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ header{
 	color: #FA6980;
 	margin-right: 92px;
 	padding-left: 20px;
+	font-weight: bold;
 }
 .nav-a{
 	display: inline-block;
@@ -23,6 +24,8 @@ li{
 	display: inline-block;
 	margin: 22px;
 	font-size: 11px;
+	color: grey;
+	font-weight: bold;
 
 }
 h2{
@@ -31,14 +34,17 @@ h2{
 	font-size: 24px;
 	margin-left: 170px;
 	font-weight: bold;
+	background-color: #F6F8F9;
 }
 .section1{
 	margin-top: 50px;
+	background-color: #F6F8F9;
 }
 .relative-base{
 	position: relative;
 /*	width: 360px;
 	height: 180px;*/
+	margin-right: 20px;
 	display: inline-block;
 }
 .absolute-base{
@@ -71,7 +77,3 @@ h4{
 	height: 50px;
 	margin-left: 20px;
 }
-footer{
-	background-color: #A6ADB4;
-}
-
