--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,11 @@ h2{
 	font-size: 24px;
 	margin-left: 170px;
 	font-weight: bold;
-	background-color: #F6F8F9;
+	
 }
 .section1{
 	margin-top: 50px;
-	background-color: #F6F8F9;
+	
 }
 .relative-base{
 	position: relative;
@@ -54,7 +54,7 @@ h2{
 	color: #FFFFFF;
 }
 .container{
-	width: 1440px;
+	/*width: 1440px;*/
 	margin: 0, auto;
 }
 h4{
@@ -76,4 +76,14 @@ h4{
 	width: 50px;
 	height: 50px;
 	margin-left: 20px;
+}
+
+.background{
+	background-color: #F6F8F9;
+}
+/*section 2*/
+p{
+	color: grey;
+	padding-left: 20px;
+
 }
